# shap

./: .clinerules  .gitignore  CMakeLists.txt  README.md
cline/cline/1737420926185/: api_conversation_history.json  ui_messages.json
cline/cline/1737424275044/: api_conversation_history.json  ui_messages.json
cline/cline/1737427573713/: api_conversation_history.json  ui_messages.json
cline/cline/1737506428762/: api_conversation_history.json  ui_messages.json
cline/cline/1737506556960/: api_conversation_history.json  ui_messages.json
cline/cline/1737506654830/: api_conversation_history.json  ui_messages.json
cline/cline/1737508902381/: api_conversation_history.json  ui_messages.json
cline/cline/1737511459682/: api_conversation_history.json  ui_messages.json
cline/cline/1737512296910/: api_conversation_history.json  ui_messages.json
cline/cline/1737514216904/: api_conversation_history.json  ui_messages.json
cline/cline/1737515416104/: api_conversation_history.json  ui_messages.json
cline/cline/1737518233202/: api_conversation_history.json  ui_messages.json
cline/cline/1737551762072/: api_conversation_history.json  ui_messages.json
cline/cline/1737560131885/: api_conversation_history.json  ui_messages.json
cline/cline/1737561787226/: api_conversation_history.json  ui_messages.json
cline/cline/1737563666689/: api_conversation_history.json  ui_messages.json
cline/cline/1737567033358/: api_conversation_history.json  ui_messages.json
cline/cline/1737569318935/: api_conversation_history.json  ui_messages.json
cline/cline/1737570609241/: api_conversation_history.json  ui_messages.json
cline/cline/1737573541309/: api_conversation_history.json  ui_messages.json
cline/cline/1737573813847/: api_conversation_history.json  ui_messages.json
cline/cline/1737574731132/: api_conversation_history.json  ui_messages.json
cline/cline/1737578526058/: api_conversation_history.json  ui_messages.json
cline/cline/1737580997117/: api_conversation_history.json  ui_messages.json
cline/cline/1737581406714/: api_conversation_history.json  ui_messages.json
cline/cline/1737581571091/: api_conversation_history.json
cline/cline/1737584890489/: api_conversation_history.json  ui_messages.json
cline/cline/1737589110884/: api_conversation_history.json  ui_messages.json
cline/cline/1737589158601/: api_conversation_history.json  ui_messages.json
cline/cline/1737589327829/: api_conversation_history.json  ui_messages.json
cline/cline/1737591637624/: api_conversation_history.json  ui_messages.json
cline/cline/1737592420921/: api_conversation_history.json  ui_messages.json
cline/cline/1737593600798/: api_conversation_history.json  ui_messages.json
cline/cline/1737598516489/: api_conversation_history.json  ui_messages.json
cline/cline/1737601395865/: api_conversation_history.json  ui_messages.json
cline/cline/1737602016929/: api_conversation_history.json  ui_messages.json
docs/: coding_conventions.md  commit_draft.md  compile_time_surfaces.md  initial_design.md  optimized_piecewise_surfaces.md
docs/tasks/: coordinate_transformation_improvements.COMPLETED.md  path_surface_unification.md  riemannian_metric_refactor.COMPLETED.md  surface_class_refactor.COMPLETED.md
docs/test-investigation/: README.md  length_scaling.md  parameter_space.md  parameter_space_validation.md  path_length_invariants.md  path_length_validation.md  space_transformations.md
examples/: basic_demo.cpp
include/shap/: coord.hpp  edge_connection.hpp  edge_descriptor.hpp  frame_vectors.hpp  geometric_point.hpp  geometry.hpp  geometry_point2.hpp  manifold.hpp  metric.hpp  param_bound.hpp  param_index.hpp  path.hpp  path3d.hpp  path_intersection.hpp  point.hpp  riemannian_metric.hpp  surface.hpp  surface3d.hpp  surface_collection.hpp  surface_point.hpp  surface_type.hpp  validation_config.hpp
src/: metric.cpp  path.cpp  path3d.cpp  riemannian_metric.cpp  surface.cpp  surface3d.cpp  surface_collection.cpp
tests/: manifold_tests.cpp  path_length_tests.cpp  path_tests.cpp  space_transformation_tests.cpp  test_utils.hpp
(+159 files in other folders)
